# db_migration_tool

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend.prod  README.md  docker-compose.oracle.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: models.py  routes.py
app/core/: db.py  errors.py  logging_config.py
app/services/: ddl_service.py  metadata_service.py  migration_service.py  repository.py
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ColumnMaskEditor.tsx  ConnectionPanel.tsx  DdlExtractPanel.tsx  JobControlPanel.tsx  JobStatusPanel.tsx  MigrationTab.tsx  TableMappingCard.tsx  TableOptionPicker.tsx
frontend/lib/: api.ts  mappers.ts  types.ts
scripts/: verify_oracle_runtime.py
scripts/linux/: run_docker.sh
scripts/oracle/: live_smoke.py
scripts/oracle/initdb/: 001_seed_oracle_smoke.sql
scripts/postgres/: init-testdb.sql
scripts/windows/: run_uv.bat
tests/: test_db_compatibility.py  test_ddl_service.py  test_metadata_service.py  test_migration_service.py  test_oracle_live_smoke.py  test_repository.py
